--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@
 node_modules/
 dist/
 
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Compiled Java class files
 *.class
 
